--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.17.1",
+    "sequelize": "^6.3.5",
+    "tedious": "^9.2.1"
   },
   "devDependencies": {
-    "got": "^11.3.0",
-    "tape": "^4.7.0"
+    "npm-check-updates": "^9.0.4",
+    "sequelize-auto": "^0.6.3"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/gustavokei/gc-dportal-caps"
   },
   "keywords": [
     "node",
