--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "md5": "^2.3.0",
     "sequelize": "^6.3.5",
     "tedious": "^9.2.1"
   },
