--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
     "md5": "^2.3.0",
     "sequelize": "^6.3.5",
     "tedious": "^9.2.1"
