--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "njwt": "^0.4.0",
     "sequelize": "^6.3.5",
     "tedious": "^9.2.1"
   },
