feat: renaming some variables name and updating README.md

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-SQL_DATABASE=
+SQL_DATABASE_LIST=
 SQL_USER=
 SQL_PASS=
-NGROK_HOST=localhost
-NGROK_PORT=1433
+EXPOSED_HOST=localhost
+EXPOSED_PORT=1433
